[package]
name = "async_and_lock_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
lazy_static = "1.4.0"
serde = { version= "1.0.162", features=["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
bytes = "1.4.0"
